--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .js,.vue src",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.16.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
@@ -31,8 +45,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^4.2.2",
+    "svgo": "^1.3.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
