--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     ]
   },
   "dependencies": {
+    "@hikaya/vue-ui-components": "^0.1.7",
+    "axios": "^0.19.2",
+    "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "nprogress": "^0.2.0",
+    "snakecase-keys": "^3.1.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.16.0",
     "vue-router": "^3.1.5",
