--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.2",
+    "miragejs": "^0.1.37",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^4.2.2",
