Add registration page (#38)
* feat: Add login page

* feat: Add logic handling auth

* feat: Add logout logic

* refactor: Correct auth logic (include refresh token logic)

* feat: Add post registration page

* fix: Correct logic for refreshing token

* feat: Add registration page

* build: Add prod environment variable

* fix: Correct validation logic

* fix: Correct validation logic

* build: Add configurations for serving prod builds

Co-authored-by: Andrew <andrew.tc.pham@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,19 +9,8 @@
     "lint": "eslint --ext .js,.vue src",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,vue}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
   "dependencies": {
-    "@hikaya/vue-ui-components": "^0.1.7",
+    "@hikaya/vue-ui-components": "^0.2.0",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
@@ -50,12 +39,26 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "http-server": "^0.12.1",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^4.2.2",
     "svgo": "^1.3.2",
+    "svgo-loader": "^2.1.0",
+    "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
