--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hikaya/vue-ui-components": "^0.2.0",
+    "@types/moment": "^2.13.0",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "snakecase-keys": "^3.1.2",
     "vue": "^2.6.11",
