--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hikaya/vue-ui-components": "^0.2.0",
     "@types/moment": "^2.13.0",
+    "@hikaya/vue-ui-components": "^0.2.6",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
