--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "inspect": "vue-cli-service inspect",
     "test:unit": "vue-cli-service test:unit",
     "lint": "eslint --ext .js,.vue src",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@hikaya/vue-ui-components": "^0.3.2",
     "@types/moment": "^2.13.0",
-    "@hikaya/vue-ui-components": "^0.2.6",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
