--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
-    "@hikaya/vue-ui-components": "^0.3.17",
+    "@hikaya/hakawati": "^0.1.0",
     "@types/moment": "^2.13.0",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
@@ -48,9 +48,9 @@
     "lint-staged": "^10.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "svg-sprite-loader": "^5.0.0",
+    "svg-sprite-loader": "^4.2.2",
     "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
+    "svgo-loader": "^2.1.0",
     "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-template-compiler": "^2.6.11"
   },
