--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 NODE_ENV = development
-VUE_APP_BASE_API = 'https://dots-be-dev.hikaya.dev/api'
+VUE_APP_BASE_API = ''https://dots-be-dev.hikaya.dev/api''
+VUE_APP_GEO_JSON_BASE_URL = 'https://raw.githubusercontent.com/hikaya-io/admin-boundaries/master/data'
+VUE_APP_MAPBOX_API_KEY = ''
+VUE_APP_MAP_BOX_STYLE = ''
