--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   },
   "dependencies": {
     "@hikaya/hakawati": "^0.1.0",
+    "@hikaya/vue-ui-components": "^0.3.11",
+    "@mapbox/mapbox-gl-draw": "^1.1.2",
     "@types/moment": "^2.13.0",
     "axios": "^0.19.2",
     "camelcase-keys": "^6.2.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "mapbox-gl": "^1.10.0",
+    "mapbox-gl-vue": "^2.0.4",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "snakecase-keys": "^3.1.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.16.0",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
